[gd_scene load_steps=2 format=3 uid="uid://d2h3u4d5s6c7n"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TopBar" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LocationLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Location"

[node name="GoldLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 11
text = "Gold: 0"

[node name="PartyStatus" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_constants/separation = 2

[node name="InteractionPrompt" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -28.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 10
text = "Press Z to interact"
horizontal_alignment = 1
